--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,36 @@
         xmlns:local="clr-namespace:Calculadora"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid Name="GeneralGrid">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100" MinHeight="50" MaxHeight="400"/>
+           
+            <RowDefinition Height="*"/>
+           
+        </Grid.RowDefinitions>
+
+        <!-- Contenido para la primera fila -->
+        <TextBlock Text="Primera fila" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+        <!-- Contenido para la segunda fila -->
+        <TextBlock Text="Segunda fila" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Grid x:Name="GridNumbers" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+        </Grid>
+
     </Grid>
 </Window>
