--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,21 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculadora"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="441" Width="400" Background="White" MinWidth="400" MinHeight="810">
     <Grid Name="GeneralGrid">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="100" MinHeight="50" MaxHeight="400"/>
-           
+            <RowDefinition Height="100" MinHeight="200" MaxHeight="400"/>
+
             <RowDefinition Height="*"/>
-           
+
         </Grid.RowDefinitions>
 
         <!-- Contenido para la primera fila -->
         <TextBlock Text="Primera fila" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         <!-- Contenido para la segunda fila -->
-        <TextBlock Text="Segunda fila" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Grid x:Name="GridNumbers" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -34,6 +33,25 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="100,42,0,0" VerticalAlignment="Top"/>
+
+
+            <!--BOTONES NUMERICOS-->
+            <Button Grid.Row="0" Grid.Column="0" Content="1" Click="Button_Click"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="2" Click="Button_Click"/>
+            <Button Grid.Row="0" Grid.Column="2" Content="3" Click="Button_Click"/>
+
+            <Button Grid.Row="1" Grid.Column="0" Content="4" Click="Button_Click"/>
+            <Button Grid.Row="1" Grid.Column="1" Content="5" Click="Button_Click"/>
+            <Button Grid.Row="1" Grid.Column="2" Content="6" Click="Button_Click"/>
+
+            <Button Grid.Row="2" Grid.Column="0" Content="7" Click="Button_Click"/>
+            <Button Grid.Row="2" Grid.Column="1" Content="8" Click="Button_Click"/>
+            <Button Grid.Row="2" Grid.Column="2" Content="9" Click="Button_Click"/>
+
+            <Button Grid.Row="3" Grid.Column="1" Content="0" Click="Button_Click"/>
+
+
 
         </Grid>
 
